--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <section id="category-section" hidden>
       <h2>Healthy or Less Healthy?</h2>
       <div id="health-options" class="grid"></div>
+      <!-- ③ Back to the area grid -->
+      <button id="health-back-btn" class="btn">← Back</button>
     </section>
 
 
